--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <title>TellMe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/browser/favicon.ico">
-<link rel="stylesheet" href="styles-5INURTSO.css"></head>
+  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/tell-me/browser/favicon.ico">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/tell-me/browser/styles-5INURTSO.css"></head>
 <body><!--nghm-->
   <app-root _nghost-ng-c3589461361 ng-version="17.2.2" ngh="0" ng-server-context="ssg"><canvas _ngcontent-ng-c3589461361 id="canvas-box"></canvas></app-root>
-<script src="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/browser/polyfills-RT5I6R6G.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/browser/main-PR3TQYWF.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/tell-me/browser/polyfills-RT5I6R6G.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/tell-me@main/dist/tell-me/browser/main-PR3TQYWF.js" type="module"></script>
 
 <script id="ng-state" type="application/json">{"__nghData__":[{}]}</script></body></html>
